--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ h6 {
   top: 0;
   left: 0;
   background: transparent url("/img/noise.webp") center/auto repeat;
-  z-index: 0;
+  z-index: 1;
 }
 #__next > div {
   z-index: 2;
@@ -856,7 +856,7 @@ header ul li:last-child a::before {
 }
 @media (min-width: 576px) {
   .page-works {
-    min-height: calc(100vh - 80px);
+    height: calc(100vh - 80px);
   }
 }
 .page-works .slide-title {
@@ -1242,17 +1242,25 @@ header ul li:last-child a::before {
   height: 100vh;
   background: linear-gradient(0deg, rgb(22, 16, 50) 0%, rgba(22, 16, 50, 0) 100%);
 }
-@media (max-width: 575px) {
+.single-work .swiper {
+  padding: 0 10%;
+}
+@media (min-width: 576px) {
   .single-work .swiper {
-    padding: 0 10%;
+    padding: 0 4%;
   }
 }
-.single-work .swiper-wrapper {
+@media (min-width: 1920px) {
+  .single-work .swiper {
+    padding: 0;
+  }
+}
+.single-work .swiper .swiper-wrapper {
   margin-bottom: 180px;
 }
 @media (min-width: 1920px) {
-  .single-work .swiper-wrapper {
-    padding: 0 25%;
+  .single-work .swiper .swiper-wrapper {
+    padding: 0 8.333333%;
   }
 }
 
