--- a/styles/scss/imports/_404.scss
+++ b/styles/scss/imports/_404.scss
@@ -1,7 +1,26 @@
 .page-404 {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 60px);
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 3;
+
+  @media (min-width: 992px) {
+    height: calc(100vh - 80px);
+  }
+
+  .back-home-button-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+  }
+
+  .title {
+    margin-top: -2em;
+  }
 }
