--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ a.button span {
   letter-spacing: 0.25em;
 }
 a.button.transparent {
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0);
   border-color: transparent;
   -webkit-backdrop-filter: none;
           backdrop-filter: none;
@@ -228,7 +228,7 @@ h6 {
   width: 100%;
   max-width: 2560px;
   height: 100vh;
-  transition: all 2s ease-out 1s;
+  transition: all 2s ease-out 1.7s;
   transform-origin: center;
   opacity: 0;
   transform: scaleX(0.5);
@@ -1346,11 +1346,224 @@ header ul li:last-child a::before {
 .page-about .main-title .title .atropos-inner {
   overflow: initial;
 }
+.page-about .big-card-about {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  flex-direction: column-reverse;
+  padding: 0;
+}
+@media (min-width: 991px) {
+  .page-about .big-card-about {
+    flex-direction: row;
+  }
+}
+.page-about .big-card-about .subtitle {
+  font-size: 1em;
+  margin-left: 0;
+  font-weight: 400;
+}
+.page-about .big-card-about-counter, .page-about .big-card-about-content {
+  width: 100%;
+  padding: 25px;
+  border-radius: 25px;
+}
+@media (min-width: 992px) {
+  .page-about .big-card-about-counter, .page-about .big-card-about-content {
+    height: 100%;
+    padding: 40px;
+  }
+}
+.page-about .big-card-about-counter {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #0f0b23;
+  border: 1px solid #0f0b23;
+  position: relative;
+  overflow: hidden;
+}
+.page-about .big-card-about-counter::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  display: block;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  transform: scale(1.15);
+  background: radial-gradient(circle, rgba(111, 66, 193, 0.5) 0%, rgba(111, 66, 193, 0.31) 16%, rgba(255, 255, 255, 0) 66%);
+}
+@media (max-width: 991px) {
+  .page-about .big-card-about-counter {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top: none;
+  }
+}
+@media (min-width: 992px) {
+  .page-about .big-card-about-counter {
+    width: 30%;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+.page-about .big-card-about-counter .counter {
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+}
+.page-about .big-card-about-counter .counter:nth-child(3), .page-about .big-card-about-counter .counter:nth-child(4) {
+  border-bottom: none;
+}
+@media (max-width: 575px) {
+  .page-about .big-card-about-counter .counter {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  .page-about .big-card-about-counter .counter:nth-child(3) {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  .page-about .big-card-about-counter .counter:nth-child(4) {
+    border-bottom: none;
+  }
+}
+@media (min-width: 576px) {
+  .page-about .big-card-about-counter .counter {
+    width: 50%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .page-about .big-card-about-counter .counter {
+    width: 100%;
+  }
+  .page-about .big-card-about-counter .counter:nth-child(3) {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+}
+@media (min-width: 1200px) {
+  .page-about .big-card-about-counter .counter:nth-child(2), .page-about .big-card-about-counter .counter:nth-child(4) {
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 991px) {
+  .page-about .big-card-about-counter .counter:nth-child(2), .page-about .big-card-about-counter .counter:nth-child(4) {
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
+  }
+}
+.page-about .big-card-about-counter .counter-title {
+  font-size: 2em;
+  font-weight: 400;
+}
+@media (min-width: 576px) {
+  .page-about .big-card-about-counter .counter-title {
+    font-size: 3.75em;
+  }
+}
+.page-about .big-card-about-counter .counter-content {
+  display: block;
+  padding: 0 15px;
+}
+.page-about .big-card-about-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.15);
+  -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+          backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+}
+@media (max-width: 991px) {
+  .page-about .big-card-about-content {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom: none;
+  }
+}
+@media (min-width: 992px) {
+  .page-about .big-card-about-content {
+    width: 50%;
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+}
+.page-about .big-card-about-content .content-wrapper {
+  margin-top: 30px;
+}
+.page-about .big-card-about-content .content-wrapper a {
+  color: #ffb400;
+}
+@media (min-width: 1200px) {
+  .page-about .big-card-about-content .button-container {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .page-about .big-card-about-content .button-container .sep {
+    max-width: 30px;
+    margin: 10px 10px 10px 20px;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  .page-about .big-card-about-content .button-container a {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .page-about .big-card-about-content .button-container a:hover {
+    background-color: rgba(255, 180, 0, 0.15);
+    border-color: rgba(255, 180, 0, 0.4);
+  }
+  .page-about .big-card-about-content .button-container > span {
+    display: block;
+    width: auto;
+  }
+  .page-about .big-card-about-content .button-container > span:last-child a {
+    padding-left: 30px;
+    white-space: nowrap;
+    margin-left: -15px;
+  }
+  .page-about .big-card-about-content .button-container > span:last-child a:hover {
+    background-color: transparent;
+    border-color: transparent;
+  }
+  .page-about .big-card-about-content .button-container > span:last-child a:hover span {
+    transition: all 0.6s ease;
+    color: #ffb400;
+  }
+}
+.page-about .big-card-about-content .button-container a {
+  -webkit-backdrop-filter: none;
+          backdrop-filter: none;
+}
 
 .page-404 {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 60px);
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 3;
+}
+@media (min-width: 992px) {
+  .page-404 {
+    height: calc(100vh - 80px);
+  }
+}
+.page-404 .back-home-button-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+}
+.page-404 .title {
+  margin-top: -2em;
 }/*# sourceMappingURL=style.css.map */
