--- a/styles/scss/imports/_about.scss
+++ b/styles/scss/imports/_about.scss
@@ -19,215 +19,226 @@
     }
   }
 
-  .big-card-about {
+  .big-card-about-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    border-radius: $radius;
-    flex-direction: column-reverse;
+    width: 100%;
     padding: 0;
 
-    @media (min-width: 991px) {
-      flex-direction: row;
-    }
-
-    .subtitle {
-      font-size: 1em;
-      margin-left: 0;
-      font-weight: 400;
-    }
-
-    &-counter,
-    &-content {
-      width: 100%;
-      padding: 25px;
-      border-radius: $radius;
-
-      @media (min-width: 992px) {
-        height: 100%;
-        padding: 40px;
-      }
-    }
-
-    &-counter {
+    .big-card-about {
       display: flex;
       flex-wrap: wrap;
-      background-color: $color1;
-      border: 1px solid $color1;
-      position: relative;
-      overflow: hidden;
-
-      &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        margin: auto;
-        display: block;
-        width: 100%;
-        height: 100%;
-        opacity: 0.7;
-        transform: scale(1.15);
-        background: radial-gradient(circle, rgb(111 66 193 / 50%) 0%, rgba(111, 66, 193, 0.31) 16%, rgba(255, 255, 255, 0) 66%);
-      }
-
-      @media (max-width: 991px) {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-top: none;
-      }
+      justify-content: center;
+      align-items: center;
+      border-radius: $radius;
+      flex-direction: column-reverse;
+      padding: 0;
 
       @media (min-width: 992px) {
-        width: 30%;
-        border-right: none;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
+        flex-direction: row;
       }
 
-      .counter {
-        width: 100%;
-        text-align: center;
-        padding: 30px 0;
+      @media (min-width: 1921px) {
+        max-width: 75%;
+      }
 
-        &:nth-child(3),
-        &:nth-child(4) {
-          border-bottom: none;
+      .subtitle {
+        font-size: 1em;
+        margin-left: 0;
+        font-weight: 400;
+      }
+
+      &-counter,
+      &-content {
+        width: 100%;
+        padding: 25px;
+        border-radius: $radius;
+
+        @media (min-width: 992px) {
+          height: 100%;
+          padding: 40px;
+        }
+      }
+
+      &-counter {
+        display: flex;
+        flex-wrap: wrap;
+        background-color: $color1;
+        border: 1px solid $color1;
+        position: relative;
+        overflow: hidden;
+
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          bottom: 0;
+          right: 0;
+          margin: auto;
+          display: block;
+          width: 100%;
+          height: 100%;
+          opacity: 0.7;
+          transform: scale(1.15);
+          background: radial-gradient(circle, rgb(111 66 193 / 50%) 0%, rgba(111, 66, 193, 0.31) 16%, rgba(255, 255, 255, 0) 66%);
         }
 
-        @media (max-width: 575px) {
-          border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        @media (max-width: 991px) {
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+          border-top: none;
+        }
 
-          &:nth-child(3) {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-          }
+        @media (min-width: 992px) {
+          width: 30%;
+          border-right: none;
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+        }
 
+        .counter {
+          width: 100%;
+          text-align: center;
+          padding: 30px 0;
+
+          &:nth-child(3),
           &:nth-child(4) {
             border-bottom: none;
           }
-        }
 
-        @media (min-width: 576px) {
-          width: 50%;
-          border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        @media screen and (min-width: 992px) and (max-width: 1199px) {
-          width: 100%;
-
-          &:nth-child(3) {
+          @media (max-width: 575px) {
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-          }
-        }
 
-        @media (min-width: 1200px) {
-          &:nth-child(2),
-          &:nth-child(4) {
-            border-left: 1px solid rgba(255, 255, 255, 0.1);
-          }
-        }
+            &:nth-child(3) {
+              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            }
 
-        @media screen and (min-width: 576px) and (max-width: 991px) {
-          &:nth-child(2),
-          &:nth-child(4) {
-            border-left: 1px solid rgba(255, 255, 255, 0.1);
-          }
-        }
-
-        &-title {
-          font-size: 2em;
-          font-weight: 400;
-
-          @media (min-width: 576px) {
-            font-size: 3.75em;
-          }
-        }
-
-        &-content {
-          display: block;
-          padding: 0 15px;
-        }
-      }
-    }
-
-    &-content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(40px) saturate(120%) brightness(100%);
-
-      @media (max-width: 991px) {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom: none;
-      }
-
-      @media (min-width: 992px) {
-        width: 50%;
-        border-left: none;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-      }
-
-      .content-wrapper {
-        margin-top: 30px;
-
-        a {
-          color: $color4;
-        }
-      }
-
-      .button-container {
-        @media (min-width: 1200px) {
-          flex-direction: row;
-          justify-content: flex-start;
-
-          .sep {
-            max-width: 30px;
-            margin: 10px 10px 10px 20px;
-            color: rgba(255, 255, 255, 0.5);
-          }
-
-          a {
-            padding-left: 60px;
-            padding-right: 60px;
-
-            &:hover {
-              background-color: rgb(255 180 0 / 15%);
-              border-color: rgb(255 180 0 / 40%);
+            &:nth-child(4) {
+              border-bottom: none;
             }
           }
 
-          > span {
+          @media (min-width: 576px) {
+            width: 50%;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+          }
+
+          @media screen and (min-width: 992px) and (max-width: 1199px) {
+            width: 100%;
+
+            &:nth-child(3) {
+              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            }
+          }
+
+          @media (min-width: 1200px) {
+            &:nth-child(2),
+            &:nth-child(4) {
+              border-left: 1px solid rgba(255, 255, 255, 0.1);
+            }
+          }
+
+          @media screen and (min-width: 576px) and (max-width: 991px) {
+            &:nth-child(2),
+            &:nth-child(4) {
+              border-left: 1px solid rgba(255, 255, 255, 0.1);
+            }
+          }
+
+          &-title {
+            font-size: 2em;
+            font-weight: 400;
+
+            @media (min-width: 576px) {
+              font-size: 3.75em;
+            }
+          }
+
+          &-content {
             display: block;
-            width: auto;
+            padding: 0 15px;
+          }
+        }
+      }
 
-            &:last-child {
-              a {
-                padding-left: 30px;
-                white-space: nowrap;
-                margin-left: -15px;
+      &-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(40px) saturate(120%) brightness(100%);
 
-                &:hover {
-                  background-color: transparent;
-                  border-color: transparent;
-                  span {
-                    transition: $anim;
-                    color: $color4;
+        @media (max-width: 991px) {
+          border-bottom-left-radius: 0;
+          border-bottom-right-radius: 0;
+          border-bottom: none;
+        }
+
+        @media (min-width: 992px) {
+          width: 50%;
+          border-left: none;
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+        }
+
+        .content-wrapper {
+          margin-top: 30px;
+
+          a {
+            color: $color4;
+          }
+        }
+
+        .button-container {
+          @media (min-width: 1200px) {
+            flex-direction: row;
+            justify-content: flex-start;
+
+            .sep {
+              max-width: 30px;
+              margin: 10px 10px 10px 20px;
+              color: rgba(255, 255, 255, 0.5);
+            }
+
+            a {
+              padding-left: 60px;
+              padding-right: 60px;
+
+              &:hover {
+                background-color: rgb(255 180 0 / 15%);
+                border-color: rgb(255 180 0 / 40%);
+              }
+            }
+
+            > span {
+              display: block;
+              width: auto;
+
+              &:last-child {
+                a {
+                  padding-left: 30px;
+                  white-space: nowrap;
+                  margin-left: -15px;
+
+                  &:hover {
+                    background-color: transparent;
+                    border-color: transparent;
+                    span {
+                      transition: $anim;
+                      color: $color4;
+                    }
                   }
                 }
               }
             }
           }
-        }
 
-        a {
-          backdrop-filter: none;
+          a {
+            backdrop-filter: none;
+          }
         }
       }
     }
