--- a/styles/style.css
+++ b/styles/style.css
@@ -1346,7 +1346,13 @@ header ul li:last-child a::before {
 .page-about .main-title .title .atropos-inner {
   overflow: initial;
 }
-.page-about .big-card-about {
+.page-about .big-card-about-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 0;
+}
+.page-about .big-card-about-container .big-card-about {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -1355,28 +1361,33 @@ header ul li:last-child a::before {
   flex-direction: column-reverse;
   padding: 0;
 }
-@media (min-width: 991px) {
-  .page-about .big-card-about {
+@media (min-width: 992px) {
+  .page-about .big-card-about-container .big-card-about {
     flex-direction: row;
   }
 }
-.page-about .big-card-about .subtitle {
+@media (min-width: 1921px) {
+  .page-about .big-card-about-container .big-card-about {
+    max-width: 75%;
+  }
+}
+.page-about .big-card-about-container .big-card-about .subtitle {
   font-size: 1em;
   margin-left: 0;
   font-weight: 400;
 }
-.page-about .big-card-about-counter, .page-about .big-card-about-content {
+.page-about .big-card-about-container .big-card-about-counter, .page-about .big-card-about-container .big-card-about-content {
   width: 100%;
   padding: 25px;
   border-radius: 25px;
 }
 @media (min-width: 992px) {
-  .page-about .big-card-about-counter, .page-about .big-card-about-content {
+  .page-about .big-card-about-container .big-card-about-counter, .page-about .big-card-about-container .big-card-about-content {
     height: 100%;
     padding: 40px;
   }
 }
-.page-about .big-card-about-counter {
+.page-about .big-card-about-container .big-card-about-counter {
   display: flex;
   flex-wrap: wrap;
   background-color: #0f0b23;
@@ -1384,7 +1395,7 @@ header ul li:last-child a::before {
   position: relative;
   overflow: hidden;
 }
-.page-about .big-card-about-counter::after {
+.page-about .big-card-about-container .big-card-about-counter::after {
   content: "";
   position: absolute;
   left: 0;
@@ -1400,77 +1411,77 @@ header ul li:last-child a::before {
   background: radial-gradient(circle, rgba(111, 66, 193, 0.5) 0%, rgba(111, 66, 193, 0.31) 16%, rgba(255, 255, 255, 0) 66%);
 }
 @media (max-width: 991px) {
-  .page-about .big-card-about-counter {
+  .page-about .big-card-about-container .big-card-about-counter {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-top: none;
   }
 }
 @media (min-width: 992px) {
-  .page-about .big-card-about-counter {
+  .page-about .big-card-about-container .big-card-about-counter {
     width: 30%;
     border-right: none;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
 }
-.page-about .big-card-about-counter .counter {
+.page-about .big-card-about-container .big-card-about-counter .counter {
   width: 100%;
   text-align: center;
   padding: 30px 0;
 }
-.page-about .big-card-about-counter .counter:nth-child(3), .page-about .big-card-about-counter .counter:nth-child(4) {
+.page-about .big-card-about-container .big-card-about-counter .counter:nth-child(3), .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(4) {
   border-bottom: none;
 }
 @media (max-width: 575px) {
-  .page-about .big-card-about-counter .counter {
+  .page-about .big-card-about-container .big-card-about-counter .counter {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
-  .page-about .big-card-about-counter .counter:nth-child(3) {
+  .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(3) {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
-  .page-about .big-card-about-counter .counter:nth-child(4) {
+  .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(4) {
     border-bottom: none;
   }
 }
 @media (min-width: 576px) {
-  .page-about .big-card-about-counter .counter {
+  .page-about .big-card-about-container .big-card-about-counter .counter {
     width: 50%;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-  .page-about .big-card-about-counter .counter {
+  .page-about .big-card-about-container .big-card-about-counter .counter {
     width: 100%;
   }
-  .page-about .big-card-about-counter .counter:nth-child(3) {
+  .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(3) {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
 }
 @media (min-width: 1200px) {
-  .page-about .big-card-about-counter .counter:nth-child(2), .page-about .big-card-about-counter .counter:nth-child(4) {
+  .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(2), .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(4) {
     border-left: 1px solid rgba(255, 255, 255, 0.1);
   }
 }
 @media screen and (min-width: 576px) and (max-width: 991px) {
-  .page-about .big-card-about-counter .counter:nth-child(2), .page-about .big-card-about-counter .counter:nth-child(4) {
+  .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(2), .page-about .big-card-about-container .big-card-about-counter .counter:nth-child(4) {
     border-left: 1px solid rgba(255, 255, 255, 0.1);
   }
 }
-.page-about .big-card-about-counter .counter-title {
+.page-about .big-card-about-container .big-card-about-counter .counter-title {
   font-size: 2em;
   font-weight: 400;
 }
 @media (min-width: 576px) {
-  .page-about .big-card-about-counter .counter-title {
+  .page-about .big-card-about-container .big-card-about-counter .counter-title {
     font-size: 3.75em;
   }
 }
-.page-about .big-card-about-counter .counter-content {
+.page-about .big-card-about-container .big-card-about-counter .counter-content {
   display: block;
   padding: 0 15px;
 }
-.page-about .big-card-about-content {
+.page-about .big-card-about-container .big-card-about-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1481,63 +1492,63 @@ header ul li:last-child a::before {
           backdrop-filter: blur(40px) saturate(120%) brightness(100%);
 }
 @media (max-width: 991px) {
-  .page-about .big-card-about-content {
+  .page-about .big-card-about-container .big-card-about-content {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     border-bottom: none;
   }
 }
 @media (min-width: 992px) {
-  .page-about .big-card-about-content {
+  .page-about .big-card-about-container .big-card-about-content {
     width: 50%;
     border-left: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
 }
-.page-about .big-card-about-content .content-wrapper {
+.page-about .big-card-about-container .big-card-about-content .content-wrapper {
   margin-top: 30px;
 }
-.page-about .big-card-about-content .content-wrapper a {
+.page-about .big-card-about-container .big-card-about-content .content-wrapper a {
   color: #ffb400;
 }
 @media (min-width: 1200px) {
-  .page-about .big-card-about-content .button-container {
+  .page-about .big-card-about-container .big-card-about-content .button-container {
     flex-direction: row;
     justify-content: flex-start;
   }
-  .page-about .big-card-about-content .button-container .sep {
+  .page-about .big-card-about-container .big-card-about-content .button-container .sep {
     max-width: 30px;
     margin: 10px 10px 10px 20px;
     color: rgba(255, 255, 255, 0.5);
   }
-  .page-about .big-card-about-content .button-container a {
+  .page-about .big-card-about-container .big-card-about-content .button-container a {
     padding-left: 60px;
     padding-right: 60px;
   }
-  .page-about .big-card-about-content .button-container a:hover {
+  .page-about .big-card-about-container .big-card-about-content .button-container a:hover {
     background-color: rgba(255, 180, 0, 0.15);
     border-color: rgba(255, 180, 0, 0.4);
   }
-  .page-about .big-card-about-content .button-container > span {
+  .page-about .big-card-about-container .big-card-about-content .button-container > span {
     display: block;
     width: auto;
   }
-  .page-about .big-card-about-content .button-container > span:last-child a {
+  .page-about .big-card-about-container .big-card-about-content .button-container > span:last-child a {
     padding-left: 30px;
     white-space: nowrap;
     margin-left: -15px;
   }
-  .page-about .big-card-about-content .button-container > span:last-child a:hover {
+  .page-about .big-card-about-container .big-card-about-content .button-container > span:last-child a:hover {
     background-color: transparent;
     border-color: transparent;
   }
-  .page-about .big-card-about-content .button-container > span:last-child a:hover span {
+  .page-about .big-card-about-container .big-card-about-content .button-container > span:last-child a:hover span {
     transition: all 0.6s ease;
     color: #ffb400;
   }
 }
-.page-about .big-card-about-content .button-container a {
+.page-about .big-card-about-container .big-card-about-content .button-container a {
   -webkit-backdrop-filter: none;
           backdrop-filter: none;
 }
