--- a/styles/scss/imports/_header.scss
+++ b/styles/scss/imports/_header.scss
@@ -130,11 +130,35 @@ header {
         }
       }
 
+      &:nth-last-child(2),
       &:last-child {
         a {
           &::before {
             display: none;
           }
+        }
+      }
+
+      &.contact-button {
+        position: fixed;
+
+        @media (max-width: 991px) {
+          bottom: 15px;
+          display: block;
+          width: 100%;
+          background-color: rgba(255, 255, 255, 0.1);
+          padding: 15px;
+          border-radius: 40px;
+          text-align: center;
+          border: 1px solid rgba(255, 255, 255, 0.2);
+          transition: $anim;
+          max-width: 270px;
+          backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+        }
+
+        @media (min-width: 992px) {
+          right: 0;
+          width: 8.333333%;
         }
       }
     }
