--- a/styles/scss/imports/_single-work.scss
+++ b/styles/scss/imports/_single-work.scss
@@ -48,6 +48,11 @@
 
     .content-wrapper {
       display: block;
+      margin-top: 30px;
+
+      p {
+        line-height: 2.4;
+      }
     }
   }
 
@@ -63,11 +68,18 @@
     }
 
     img {
-      width: 100%;
-      max-width: 100%;
       display: block;
       margin: auto;
+      object-fit: contain;
+      max-width: 100%;
+      width: 100% !important;
+      position: relative !important;
+      height: unset !important;
       border-radius: $radius;
+    }
+
+    > span {
+      position: unset !important;
     }
 
     .bottom {
