--- a/styles/scss/imports/_global.scss
+++ b/styles/scss/imports/_global.scss
@@ -217,6 +217,7 @@ a.github-link {
   .col {
     height: 100vh;
     border-right: 1px solid #fff;
+    opacity: 0.1;
 
     &:nth-child(4) {
       border: none;
