--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,7 @@ a.github-link {
 .lines .col {
   height: 100vh;
   border-right: 1px solid #fff;
+  opacity: 0.1;
 }
 .lines .col:nth-child(4) {
   border: none;
