--- a/styles/scss/imports/_header.scss
+++ b/styles/scss/imports/_header.scss
@@ -23,8 +23,8 @@
       top: 0;
       border-bottom: 1px solid transparent;
       background: rgb(0 0 0 / 0%);
-      border-color: rgba(255, 255, 255, 0.2);
       background: rgb(0 0 0 / 33%);
+      border-color: rgba(255, 255, 255, 0.2);
       -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
       backdrop-filter: blur(40px) saturate(120%) brightness(100%);
       transform: translate3d(0, -100%, 0);
@@ -33,6 +33,7 @@
 
       @media (min-width: 576px) {
         height: 80px;
+        background: rgb(0 0 0 / 60%);
       }
     }
 
