--- a/styles/style.css
+++ b/styles/style.css
@@ -746,8 +746,8 @@ a.github-link {
   top: 0;
   border-bottom: 1px solid transparent;
   background: rgba(0, 0, 0, 0);
-  border-color: rgba(255, 255, 255, 0.2);
   background: rgba(0, 0, 0, 0.33);
+  border-color: rgba(255, 255, 255, 0.2);
   -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
   backdrop-filter: blur(40px) saturate(120%) brightness(100%);
   transform: translate3d(0, -100%, 0);
@@ -757,6 +757,7 @@ a.github-link {
 @media (min-width: 576px) {
   .header-container-wrapper::after {
     height: 80px;
+    background: rgba(0, 0, 0, 0.6);
   }
 }
 .header-container-wrapper.fixed {
