Height paragraph on slider fix

--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -241,6 +241,7 @@
 
     .content-wrapper {
       margin-bottom: 60px;
+      min-height: 100px;
       margin-top: 0;
 
       @media (max-height: 919px) {
