--- a/styles/style.css
+++ b/styles/style.css
@@ -1117,6 +1117,7 @@ header ul li.contact-button {
 }
 .page-works .button-container .content-wrapper {
   margin-bottom: 60px;
+  min-height: 100px;
   margin-top: 0;
 }
 @media (max-height: 919px) {
