--- a/styles/style.css
+++ b/styles/style.css
@@ -57,10 +57,8 @@ body::-webkit-scrollbar {
   display: none;
 }
 body {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 main {
@@ -1060,7 +1058,7 @@ header ul li.contact-button {
   transform: translate3d(15px, 0, 0);
 }
 .page-works .navigation button:hover .arrow > span:last-child {
-  transform: translate3d(0, -2px, 0) scaleX(1.25);
+  transform: translate3d(0, -2px, 0) scaleX(0.75);
 }
 .page-works .navigation button:hover .circle {
   transform: scale(1);
@@ -1461,8 +1459,10 @@ header ul li.contact-button {
 .page-about .big-card-about-container .big-card-about-counter {
   display: flex;
   flex-wrap: wrap;
-  background-color: #0f0b23;
-  border: 1px solid #0f0b23;
+  background: rgba(115, 115, 115, 0.15);
+  -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+          backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+  border: 1px solid rgba(255, 255, 255, 0.2);
   position: relative;
   overflow: hidden;
 }
