--- a/styles/scss/imports/_404.scss
+++ b/styles/scss/imports/_404.scss
@@ -12,15 +12,16 @@
     height: calc(100vh - 80px);
   }
 
+  a.logo-link.on-page-404 {
+    display: block;
+    margin-bottom: 20px;
+  }
+
   .back-home-button-container {
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
-  }
-
-  .title {
-    margin-top: -2em;
+    margin-top: 30px;
   }
 }
