--- a/styles/scss/imports/_global.scss
+++ b/styles/scss/imports/_global.scss
@@ -68,6 +68,7 @@ a {
       border-color: transparent;
       backdrop-filter: none;
 
+      &.hover-style,
       &:hover {
         backdrop-filter: blur(40px) saturate(120%) brightness(100%);
       }
@@ -91,6 +92,7 @@ a {
       }
     }
 
+    &.hover-style,
     &:hover {
       // background-color: rgba(255, 255, 255, 0.2);
 
@@ -529,6 +531,55 @@ a.github-link {
   }
 }
 
+.svg-container {
+  &-wrapper {
+    position: relative;
+
+    .tooltip {
+      display: none;
+      position: absolute;
+      width: 170px;
+      top: -48px;
+      left: -64px;
+      margin: auto;
+
+      span {
+        position: relative;
+        display: block;
+        width: fit-content;
+        padding: 5px 15px;
+        border-radius: 5px;
+        text-align: center;
+        background-color: rgb(97, 79, 118);
+        margin: auto;
+
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          width: 10px;
+          height: 10px;
+          background-color: rgb(97, 79, 118);
+          left: 0;
+          right: 0;
+          bottom: -5px;
+          margin: auto;
+          transform: rotate(45deg);
+          z-index: 1;
+        }
+      }
+    }
+
+    &:focus,
+    &:active,
+    &:hover {
+      .tooltip {
+        display: block;
+      }
+    }
+  }
+}
+
 .subtitle {
   opacity: 0;
   color: $color4;
@@ -698,6 +749,7 @@ a.github-link {
 }
 
 .button-container {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -731,6 +783,11 @@ a.github-link {
     @media (min-width: 768px) {
       display: block;
     }
+  }
+
+  .visit-website {
+    position: absolute;
+    bottom: -70px;
   }
 }
 
