--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ a.button.transparent {
   -webkit-backdrop-filter: none;
           backdrop-filter: none;
 }
-a.button.transparent:hover {
+a.button.transparent.hover-style, a.button.transparent:hover {
   -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
           backdrop-filter: blur(40px) saturate(120%) brightness(100%);
 }
@@ -121,11 +121,11 @@ a.button.has-line .line {
   transform-origin: center bottom;
   transition: all 0.6s ease;
 }
-a.button:hover {
+a.button.hover-style, a.button:hover {
   background-color: rgba(111, 66, 193, 0.15);
   border-color: #6f42c1;
 }
-a.button:hover .line {
+a.button.hover-style .line, a.button:hover .line {
   transform: scaleY(0);
 }
 
@@ -508,6 +508,47 @@ a.github-link {
   color: transparent;
 }
 
+.svg-container-wrapper {
+  position: relative;
+}
+.svg-container-wrapper .tooltip {
+  display: none;
+  position: absolute;
+  width: 170px;
+  top: -48px;
+  left: -64px;
+  margin: auto;
+}
+.svg-container-wrapper .tooltip span {
+  position: relative;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px 15px;
+  border-radius: 5px;
+  text-align: center;
+  background-color: rgb(97, 79, 118);
+  margin: auto;
+}
+.svg-container-wrapper .tooltip span::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(97, 79, 118);
+  left: 0;
+  right: 0;
+  bottom: -5px;
+  margin: auto;
+  transform: rotate(45deg);
+  z-index: 1;
+}
+.svg-container-wrapper:focus .tooltip, .svg-container-wrapper:active .tooltip, .svg-container-wrapper:hover .tooltip {
+  display: block;
+}
+
 .subtitle {
   opacity: 0;
   color: #ffb400;
@@ -670,6 +711,7 @@ a.github-link {
 }
 
 .button-container {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -702,6 +744,10 @@ a.github-link {
   .button-container .content-wrapper {
     display: block;
   }
+}
+.button-container .visit-website {
+  position: absolute;
+  bottom: -70px;
 }
 
 .line {
@@ -1293,6 +1339,15 @@ header ul li.contact-button {
 }
 .single-work .button-container .content-wrapper p {
   line-height: 2.4;
+}
+.single-work .button-container .visit-website {
+  z-index: 1;
+  bottom: -80px;
+}
+@media (min-width: 992px) {
+  .single-work .button-container .visit-website {
+    left: 16%;
+  }
 }
 .single-work .mockup-design {
   display: block;
