--- a/styles/scss/imports/_single-work.scss
+++ b/styles/scss/imports/_single-work.scss
@@ -58,9 +58,16 @@
     .visit-website {
       z-index: 1;
       bottom: -80px;
+      max-width: 100%;
+      width: calc(50% + 12px);
 
       @media (min-width: 992px) {
         left: 16%;
+        width: calc(25% + 6px);
+      }
+
+      @media (min-width: 1400px) {
+        width: 17%;
       }
     }
   }
