--- a/styles/scss/imports/_global.scss
+++ b/styles/scss/imports/_global.scss
@@ -535,6 +535,7 @@ a.github-link {
 .svg-container {
   &-wrapper {
     position: relative;
+    opacity: 0;
 
     .tooltip {
       display: none;
