--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -243,6 +243,7 @@
       margin-bottom: 60px;
       min-height: 100px;
       margin-top: 0;
+      opacity: 0;
 
       @media (max-height: 919px) {
         display: none;
