fix: icon skills page

--- a/styles/scss/imports/_skills.scss
+++ b/styles/scss/imports/_skills.scss
@@ -53,6 +53,10 @@
         margin-bottom: 20px !important;
       }
 
+      .img {
+        margin-bottom: 15px;
+      }
+
       .subtitle {
         font-size: 1em;
         margin-left: 0;
